Please see NEWS for a summary of changes since the last release suitable
for announcements.

2011-02-13 Thunor <thunorsif_at_hotmail.com>
* Version 2.1.7 released (r202)

2011-02-10 Thunor <thunorsif_at_hotmail.com>
* Added a dynamic modal dialog.
* Added an exit dialog to confirm writing to sz81rc.
* Added Win32 support via the _WIN32 preprocessor macro.

2011-02-03 Thunor <thunorsif_at_hotmail.com>
* Added dragging ability to hotspots via SDL_DRAGGED state (very easy).
* Added a ZX style scrollbar to the load file dialog for mouse control.

2011-01-30 Thunor <thunorsif_at_hotmail.com>
* Added pausing the emulator via Pause (SDLK_PAUSE). For platforms that
  don't have a Pause key, adding a ctrl_remap to sz81rc that remaps
  an input control to SDLK_PAUSE will enable access to this feature.
  The load/save state dialogs place the emulator on hold in any case.

2011-01-30 Chris Young <chris_at_unsatisfactorysoftware.co.uk>
* OS4 sz81 LOAD/SAVE now follows the last used directory.  Set tooltype
  STATICLOADDIR to revert to previous behaviour.

2011-01-29 Chris Young <chris_at_unsatisfactorysoftware.co.uk>
* Create a useful program dir in LOCAL_DATA_DIR, and make the Amiga
  version use it by default for all loads and saves.

2011-01-28 Thunor <thunorsif_at_hotmail.com>
* Added saving screenshots via PrtScn (SDLK_PRINT). For platforms that
  don't have a PrtScn key, adding a ctrl_remap to sz81rc that remaps
  an input control to SDLK_PRINT will enable access to this feature.

2011-01-27 Thunor <thunorsif_at_hotmail.com>
* Added save state and load state icons to the control bar.

2011-01-26 Thunor <thunorsif_at_hotmail.com>
* Added a save state system (F4/F5) although awaiting integration into
  the control bar.

2011-01-16 Thunor <thunorsif_at_hotmail.com>
* Replaced z81's save_p: ZX80 files can now be named by default as date
  and time stamped or extracted from a xxxx REM SAVE "progname" line.

2011-01-14 Thunor <thunorsif_at_hotmail.com>